# git-sling

./: .gitignore  README.md  add-git-alias.sh  attempt-branch.sh  check-for-upgrade.sh  create_buildvm_sling.sh  cron.sh  delete-rejected.sh  elfs-prepush.sh  git-delete-sling-branch.sh  git-propose  git-propose.py  git-propose.sh  git-sling-check-rebase.sh  git-sling.sh  install-server.sh  print-queue.sh  remote-install.sh  sed.sh  sling-build-cron.sh  sling-build-elfs.sh  sling-build-example-project.sh  sling-config.sh  sling-config.sh.example  xargs.sh
packaging/: build-srpm  build.sh  sling.spec
server/: sling-server.cabal  stack.yaml
server/app/: Main.hs  ParallelBuild.hs
server/src/: Sling.hs
server/src/Sling/: Email.hs  Git.hs  Lib.hs  Options.hs  Path.hs  Prepush.hs  Proposal.hs  Web.hs
server/test/: Spec.hs
server/test/sanity/: send_email.sh  test-funcs.sh  test.sh
server/test/sanity/tests/: bad-email.sh  basic.sh  deleted-remote-branch.sh  dry-run.sh  duplicate-propose.sh  flatten.sh  in-progress-resume.sh  matching.sh  merge-commit.sh  multi-propose.sh  onto.sh  order.sh  over-master.sh  rebase.sh  reject.sh  source-target.sh  specific-proposal.sh  take-job.sh  ticket.sh
